# Geo-Distribution-Installer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  geo-distro-installer.py  install-geo-distro.sh  map.html  pyproject.toml  requirements.txt  verify-installation.py
.github/workflows/: docker-publish.yml  python-publish.yml
Geo-Distribution-Installer/.github/workflows/: python-publish.yml
Geo-Distribution-Installer/examples/: quick-start.py
docs/: DOCKER.md
geo-distro/: setup.py
geo-distro/examples/: quick-start.py  spatial-analysis.py
geo-distro/scripts/: install-geo-distro.bat  install-geo-distro.sh
geo-distro/src/geodistro/: cli.py  core.py  installer.py  verifier.py
geo-distro/tests/: test_verifier.py
src/geodistro/: __init__.py  requirements.txt
src/geodistro/examples/: web-mapping.py
src/geodistro/scripts/: geo-distro-installer.py
tests/: test_installer.py  test_verifier.py
